# dog

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  version.hpp.in
.github/workflows/: cmake.yml
include/: program_options.hpp
src/: CMakeLists.txt  main.cpp  program_options.cpp
